fix: image gallery alignment

--- a/assets/css/images.css
+++ b/assets/css/images.css
@@ -46,7 +46,8 @@ video {
 
 /* Image gallery. */
 .image-gallery {
-  margin: 1.2rem 0;
+  padding: 0 0 1rem 0;
+  magin: 0;
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
@@ -61,8 +62,9 @@ video {
 
 .image-gallery li img {
   object-fit: cover;
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 100%;
+
   vertical-align: middle;
   border-radius: 4px;
 }
